--- a/src/content/post/climbing-shoes/climbing-shoes.mdx
+++ b/src/content/post/climbing-shoes/climbing-shoes.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Climbing Shoes"
 publishDate: 2023-07-07
-customSlug: climbing-shoes
 tags: ["business-idea", "thought"]
 ---
 
@@ -10,29 +9,15 @@ Fact: Climbing shoes smell.
 
 import Thought from "@components/Thought.astro"
 
-
-<br/>
-<br/>
-
 <Thought>
+Was just searching for UV-C sanitizers...and...
+
+
 New product idea: UV sterilizer for climbing shoes
 </Thought>
-
-
-<br/>
 
 [@eb](https://www.eb-escalade.com/) ?
 [@climbUp](https://www.climb-up.fr/) ?
 [@arkose](https://arkose.com/) ?
 
 Just put that into the changing room (or at least just a spray)
-
----
-
-<br/>
-<br/>
-<br/>
-
-<Thought>
-Was just searching for UV-C sanitizers...
-</Thought>
