--- a/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
+++ b/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
@@ -4,9 +4,7 @@ publishDate: 2023-07-26
 tags: ["thought"]
 ---
 
-The crème de la crème of English expression
-
----
+> The crème de la crème of English expression
 
 I often read english articles and found some treasure in them, here is a non-exhausive list:
 
