--- a/src/content/post/massy-bus-station/massy-bus-station.mdx
+++ b/src/content/post/massy-bus-station/massy-bus-station.mdx
@@ -43,7 +43,7 @@ import busStation2024 from "./2024_massy-bus-station.png"
 <Carousel>
   <div slot="1" class="center">
     <p>2021 bus station</p>
-    <Image src={busStation2021} alt="2021 bus station" />
+    <Image src={busStation2021} alt="2021 bus station" loading="eager" />
     <ul>
       <li>Bicycle lanes are in purple</li>
       <li>There was ample space for pedestrians.</li>
@@ -53,7 +53,7 @@ import busStation2024 from "./2024_massy-bus-station.png"
   </div>
   <div slot="2" class="center">
     <p>2022 bus station</p>
-    <Image src={busStation2022} alt="2022 bus station" />
+    <Image src={busStation2022} alt="2022 bus station" loading="eager" />
     <ul>
       <li>The bus station was closed for roadworks.</li>
       <li>A temporary, smaller bus station was established.</li>
@@ -63,7 +63,7 @@ import busStation2024 from "./2024_massy-bus-station.png"
   </div>
   <div slot="3" class="center">
     <p>2023 bus station</p>
-    <Image src={busStation2023} alt="2023 bus station" />
+    <Image src={busStation2023} alt="2023 bus station" loading="eager" />
     <ul>
     <li>The new bus station became operational, with buses now following a clockwise rotation.</li>
     <li>With the clockwise rotation, the pedestrian drop-off area was relocated to a tiny island in the middle of the bus lanes.</li>
@@ -74,7 +74,7 @@ import busStation2024 from "./2024_massy-bus-station.png"
   </div>
   <div slot="4" class="center">
     <p>2024 bus station</p>
-    <Image src={busStation2024} alt="2024 bus station" />
+    <Image src={busStation2024} alt="2024 bus station" loading="eager" />
     <ul>
       <li>Usage of the footbridge became mandatory, causing confusion for newcomers unsure of the correct bus stop location. Many avoid using the footbridge, fearing they might climb it unnecessarily and potentially miss their bus.</li>
       <li>The station's usability declined significantly for individuals with reduced mobility.</li>
@@ -92,7 +92,7 @@ By switching from a counterclockwise to a clockwise rotation, the station's layo
 import finalProject from "./final-project.png"
 
 <div class="center">
-  <Image src={finalProject} alt="Final project" />
+  <Image src={finalProject} alt="Final project" loading="eager"/>
   <p>Final project simulation</p>
 </div>
 
