--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -239,6 +239,8 @@ tags: ["thought"]
 ### blog
 
 - https://tomassetti.me/
+- https://smallcultfollowing.com/babysteps/ - blog
+- https://without.boats/blog/ - blog
 - https://n-o-d-e.net/ - blog
 - https://santaclz.github.io/ - blog
 - https://matklad.github.io/ - blog
