--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -280,6 +280,7 @@ tags: ["thought"]
 - https://github.com/mborgerson/gdbstub - debugging
 - https://crontab.guru/ - cron expression
 - https://ceph.io/ - distributed storage
+- https://shell-storm.org/shellcode/ - execute shell
 - https://www.vesselfinder.com/ - boat finder
 - https://www.marinetraffic.com/ - boat finder
 - https://www.windy.com/ - wind information
