--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -18,10 +18,9 @@ tags: ["thought"]
 - https://github.com/udevbe/greenfield
 - https://github.com/rerun-io/rerun
 - https://github.com/adafruit/Adafruit_ILI9341
-- https://github.com/juspay/hyperswitch
 - https://github.com/vosen/ZLUDA - CUDA for AMD
-- https://www.aaaaaaaaaa.org/
 - https://atomicsemi.com/
+- https://px4.io/ - Open Source Autopilot for Drone
 
 ## Others
 
@@ -222,6 +221,7 @@ tags: ["thought"]
 - https://wiki.mozilla.org/Areweyet
 - https://www.recyclermonbateau.fr/ - boat recycling
 - https://c-git.github.io/
+- https://www.aaaaaaaaaa.org/ - making research more accessible
 - https://paroj.github.io/gltut/ - modern 3D graphics programming
 - https://isuckatcs.github.io/how-to-compile-your-language/
 - https://endesga.xyz/
@@ -333,6 +333,7 @@ tags: ["thought"]
 - https://www.piliapp.com/ - many useful tools
 - https://github.com/0xsyr0/OSCP - cheat sheet
 - https://vim.rtorr.com/ - vim cheat sheet
+- https://github.com/juspay/hyperswitch - open source payments switch
 - https://travelboast.com/ - show people your trip
 - https://www.beeper.com/ - all your chats in one app
 - https://github.com/sickcodes/Docker-OSX - run macOS VM in a Docker
