--- a/src/content/post/student-associations/student-associations.mdx
+++ b/src/content/post/student-associations/student-associations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Student associations
 publishDate: 2024-01-20
-customSlug: telecom-paris-student-associations
+customSlug: student-associations
 tags: ["thought"]
 ---
 
